--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@thirdweb-dev/contracts": "^3.0.3",
     "@thirdweb-dev/react": "^2.3.0",
     "@thirdweb-dev/sdk": "^2.2.11",
     "ethers": "^5.6.6",
@@ -32,5 +33,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6"
   }
 }
